<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingEnd="4dp"
    android:paddingVertical="10dp">

    <ImageView
        android:id="@+id/server_active"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/servers_in_use"
        android:src="@drawable/ic_check_circle"
        app:tint="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/server_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/server_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="?attr/colorOnSurfaceVariant" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/server_add_account"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/servers_add_account"
        android:src="@drawable/ic_person_add"
        app:tint="?attr/colorOnSurfaceVariant" />

    <ImageButton
        android:id="@+id/server_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/downloads_delete"
        android:src="@drawable/ic_delete"
        app:tint="?attr/colorOnSurfaceVariant" />
</LinearLayout>
